error.log
    Checking cfg-if v1.0.0
    Checking stable_deref_trait v1.2.0
    Checking smallvec v1.13.2
    Checking once_cell v1.20.2
    Checking log v0.4.22
    Checking writeable v0.5.5
    Checking litemap v0.7.4
    Checking crossbeam-utils v0.8.20
    Checking windows_x86_64_msvc v0.42.2
    Checking simd-adler32 v0.3.7
    Checking icu_locid_transform_data v1.5.0
    Checking num-traits v0.2.19
    Checking windows_x86_64_msvc v0.48.5
    Checking serde v1.0.215
    Checking zerofrom v0.1.5
    Checking bytemuck v1.20.0
    Checking windows_x86_64_msvc v0.52.6
    Checking icu_properties_data v1.5.0
    Checking windows-targets v0.42.2
    Checking bitflags v1.3.2
    Checking windows-targets v0.48.5
    Checking windows-sys v0.45.0
    Checking write16 v1.0.0
    Checking icu_normalizer_data v1.5.0
    Checking ttf-parser v0.25.1
    Checking yoke v0.7.5
    Checking windows-targets v0.52.6
    Checking adler2 v2.0.0
    Checking utf8_iter v1.0.4
    Checking utf16_iter v1.0.5
    Checking raw-window-handle v0.5.2
    Checking scopeguard v1.2.0
    Checking winapi v0.3.9
    Checking ab_glyph_rasterizer v0.1.8
    Checking zerocopy v0.7.35
    Checking crc32fast v1.4.2
    Checking parking_lot_core v0.9.10
    Checking miniz_oxide v0.8.0
    Checking instant v0.1.13
    Checking base64 v0.21.7
    Checking lock_api v0.4.12
    Checking nohash-hasher v0.2.0
    Checking zerovec v0.10.4
    Checking percent-encoding v2.3.1
    Checking crossbeam-epoch v0.9.18
    Checking either v1.13.0
    Checking windows v0.48.0
    Checking weezl v0.1.8
    Checking static_assertions v1.1.0
    Checking form_urlencoded v1.2.1
    Checking error-code v3.3.1
    Checking glutin_wgl_sys v0.4.0
    Checking zune-inflate v0.2.54
    Checking fdeflate v0.3.6
    Checking parking_lot v0.12.3
    Checking crossbeam-deque v0.8.5
    Checking half v2.4.1
    Checking clipboard-win v5.4.0
    Checking bit_field v0.10.2
    Checking flate2 v1.0.35
    Checking lebe v0.5.2
    Checking color_quant v1.1.0
    Checking memoffset v0.7.1
    Checking rayon-core v1.12.1
    Checking num-integer v0.1.46
    Checking qoi v0.4.1
    Checking glow v0.12.3
    Checking byteorder v1.5.0
    Checking gif v0.13.1
    Checking arboard v3.4.1
    Checking web-time v0.2.4
    Checking thiserror v1.0.69
    Checking num-complex v0.4.6
    Checking crossbeam-queue v0.3.12
    Checking crossbeam-channel v0.5.15
    Checking windows-sys v0.48.0
    Checking png v0.17.14
    Checking num-bigint v0.4.6
    Checking num-iter v0.1.45
    Checking num_cpus v1.17.0
    Checking rayon v1.10.0
    Checking exr v1.73.0
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking crossbeam v0.8.4
    Checking icu_locid v1.5.0
    Checking icu_provider v1.5.0
    Checking num-rational v0.4.2
    Checking owned_ttf_parser v0.25.0
    Checking icu_locid_transform v1.5.0
    Checking ab_glyph v0.2.29
    Checking num v0.4.3
    Checking accesskit v0.12.3
    Checking ahash v0.8.11
    Checking ecolor v0.24.1
    Checking bitflags v2.6.0
    Checking emath v0.24.1
    Checking ron v0.8.1
    Checking icu_properties v1.5.1
    Checking epaint v0.24.1
    Checking libloading v0.7.4
    Checking dirs-sys-next v0.1.2
    Checking rfd v0.12.1
    Checking directories-next v2.0.0
    Checking jpeg-decoder v0.3.1
    Checking tiff v0.9.1
    Checking accesskit_consumer v0.16.1
    Checking image v0.24.9
    Checking egui v0.24.1
    Checking icu_normalizer v1.5.0
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
    Checking url v2.5.4
    Checking winit v0.28.7
    Checking glutin_egl_sys v0.5.1
    Checking webbrowser v0.8.15
    Checking glutin v0.30.10
    Checking glutin-winit v0.3.0
    Checking egui_glow v0.24.1
    Checking accesskit_windows v0.15.1
    Checking accesskit_winit v0.15.0
    Checking egui-winit v0.24.1
    Checking eframe v0.24.1
    Checking fractal_generator v0.1.0 (C:\Users\roket\Documents\dev\imageproject\FractalGenerator)
warning: fields `min_detail_level`, `max_detail_level`, and `error_threshold` are never read
  --> src\fractal_calculator.rs:30:5
   |
29 | pub struct AdaptiveRenderer {
   |            ---------------- fields in this struct
30 |     min_detail_level: u32,
   |     ^^^^^^^^^^^^^^^^
31 |     max_detail_level: u32,
   |     ^^^^^^^^^^^^^^^^
32 |     error_threshold: f64,
   |     ^^^^^^^^^^^^^^^
   |
   = note: `AdaptiveRenderer` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` on by default

warning: fields `escape_radius` and `color_lookup` are never read
  --> src\fractal_calculator.rs:37:5
   |
36 | pub struct PrecomputedData {
   |            --------------- fields in this struct
37 |     escape_radius: Vec<f64>,
   |     ^^^^^^^^^^^^^
38 |     color_lookup: Vec<(u8, u8, u8)>,
   |     ^^^^^^^^^^^^
   |
   = note: `PrecomputedData` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: fields `data` and `size` are never read
  --> src\fractal_calculator.rs:43:5
   |
42 | pub struct SharedMemoryBuffer {
   |            ------------------ fields in this struct
43 |     data: Arc<RwLock<Vec<u8>>>,
   |     ^^^^
44 |     size: (usize, usize),
   |     ^^^^
   |
   = note: `SharedMemoryBuffer` has a derived impl for the trait `Clone`, but this is intentionally ignored during dead code analysis

warning: methods `optimize_complex_ops` and `fast_norm` are never used
   --> src\fractal_calculator.rs:160:8
    |
47  | impl<F: FractalFunction + Sync> FractalCalculator<F> {
    | ---------------------------------------------------- methods in this implementation
...
160 |     fn optimize_complex_ops(&self, z: Complex<f64>) -> Complex<f64> {
    |        ^^^^^^^^^^^^^^^^^^^^
...
168 |     fn fast_norm(&self, z: Complex<f64>) -> f64 {
    |        ^^^^^^^^^

warning: `fractal_generator` (lib) generated 4 warnings
warning: unused imports: `BurningShip`, `GrayscaleScheme`, `JuliaSet`, `MandelbrotSet`, `NewtonSet`, and `QualityLevel`
 --> src\bin\generate_assets.rs:2:45
  |
2 |     fractal_calculator::{FractalCalculator, QualityLevel},
  |                                             ^^^^^^^^^^^^
3 |     fractal_params::FractalParams,
4 |     fractal_types::{MandelbrotSet, JuliaSet, BurningShip, NewtonSet},
  |                     ^^^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^
5 |     color_schemes::{FireScheme, OceanScheme, RainbowScheme, ClassicScheme, GrayscaleScheme},
  |                                                                            ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::path::Path`
 --> src\bin\generate_assets.rs:8:5
  |
8 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

error[E0283]: type annotations needed
   --> src\bin\generate_assets.rs:22:16
    |
22  |     let calc = FractalCalculator::new_mandelbrot(params.clone());
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `F` declared on the struct `FractalCalculator`
    |
    = note: cannot satisfy `_: FractalFunction`
    = help: the following types implement trait `FractalFunction`:
              JuliaSet
              MandelbrotSet
              NewtonSet
              fractal_generator::fractal_types::BurningShip
              fractal_generator::fractal_types::Tricorn
note: required by a bound in `FractalCalculator::<F>::new_mandelbrot`
   --> C:\Users\roket\Documents\dev\imageproject\FractalGenerator\src\fractal_calculator.rs:47:9
    |
47  | impl<F: FractalFunction + Sync> FractalCalculator<F> {
    |         ^^^^^^^^^^^^^^^ required by this bound in `FractalCalculator::<F>::new_mandelbrot`
...
113 |     pub fn new_mandelbrot(params: FractalParams) -> FractalCalculator<MandelbrotSet> {
    |            -------------- required by a bound in this associated function
help: consider specifying the generic argument
    |
22  |     let calc = FractalCalculator::<F>::new_mandelbrot(params.clone());
    |                                 +++++

For more information about this error, try `rustc --explain E0283`.
warning: `fractal_generator` (bin "generate_assets") generated 2 warnings
error: could not compile `fractal_generator` (bin "generate_assets") due to 1 previous error; 2 warnings emitted
